# webassembly

./: README.md  Vagrantfile  setup.sh
rustwebassembly/: Cargo.toml  index.html  index.js
rustwebassembly/doc/: doc1.md
rustwebassembly/pkg/: package.json  rustwebassembly.d.ts  rustwebassembly.js  rustwebassembly_bg.wasm  rustwebassembly_bg.wasm.d.ts
rustwebassembly/src/: lib.rs
webassembly_c/: quick_example.js  quick_example.wasm
webassembly_c/doc/: doc1.md
